# DicomViewer

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CustomTreeView.cpp  CustomTreeView.h  DicomDisplay.cpp  DicomDisplay.h  FileSystem.cpp  FileSystem.h  FileTree.qml  FolderTree.qml  PatientItemModel.cpp  PatientItemModel.h  PatientList.qml  PatientListModel.cpp  PatientListModel.h  PatientModelObject.cpp  PatientModelObject.h  PatientTree.qml  PixmapImage.cpp  PixmapImage.h  QMLDicomImage.cpp  QMLDicomImage.h  README.md  SeriesList.qml  SeriesListModel.cpp  SeriesListModel.h  StudyList.qml  StudyListModel.cpp  StudyListModel.h  StudyTree.qml  ThreeDFrame.qml  build.ninja  cmake_install.cmake  dicomviewer.js  dicomviewer_qmltyperegistrations.cpp  (+9 more)
.github/workflows/: web.yml
.qt/: QtDeploySupport.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_dicomviewer.cmake  Qt6_QmlPlugins_Imports_dicomviewer.rsp
.rcc/: dicomviewer_raw_qml_0.qrc  qmake_Example.qrc  qmake_Example_copy.qrc  qrc_dicomviewer_raw_qml_0.cpp  qrc_qmake_Example.cpp  qrc_qmake_Example_copy.cpp
.rcc/qmlcache/: dicomviewer_FileList_qml.cpp  dicomviewer_FolderTree_qml.cpp  dicomviewer_PatientList_qml.cpp  dicomviewer_SeriesList_qml.cpp  dicomviewer_StudyList_qml.cpp  dicomviewer_ThreeDFrame_qml.cpp  dicomviewer_main_qml.cpp  dicomviewer_qml_loader_file_list.rsp  dicomviewer_qmlcache_loader.cpp
CPM_modules/: Findgdcm.cmake
Example/: SeriesList.qml  main.qml  qmldir
dicomviewer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
dicomviewer_autogen/EWIEGA46WW/: moc_DicomDisplay.cpp  moc_DicomDisplay.cpp.d  moc_DicomDisplay.cpp.json  moc_PatientListModel.cpp  moc_PatientListModel.cpp.d  moc_PatientListModel.cpp.json  moc_PixmapImage.cpp.d  moc_QMLDicomImage.cpp  moc_QMLDicomImage.cpp.d  moc_QMLDicomImage.cpp.json  moc_SeriesListModel.cpp  moc_SeriesListModel.cpp.d  moc_SeriesListModel.cpp.json  moc_StudyListModel.cpp  moc_StudyListModel.cpp.d  moc_StudyListModel.cpp.json
meta_types/: dicomviewer_json_file_list.txt  dicomviewer_json_file_list.txt.timestamp  qt6dicomviewer_metatypes.json
qmltypes/: dicomviewer_foreign_types.txt
scripts/: download-qt.sh
